@@ -1,12 +1,13 @@
 package jeonseguard.backend.transaction.application.facade;
 
 import jeonseguard.backend.transaction.application.service.*;
-import jeonseguard.backend.transaction.presentation.dto.request.*;
+import jeonseguard.backend.transaction.presentation.dto.request.TransactionAddressRequest;
 import jeonseguard.backend.transaction.presentation.dto.response.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -14,39 +15,57 @@ public class TransactionFacade {
     private final TransactionJeonseQueryService transactionJeonseQueryService;
     private final TransactionSaleQueryService transactionSaleQueryService;
 
-    public List<TransactionJeonseApartmentResponse> getTransactionJeonseHistoryForApartment(TransactionJeonseAddressRequest request) {
+    public TransactionSummaryApartmentResponse getTransactionSummaryHistoryForApartment(TransactionAddressRequest request) {
+        List<TransactionJeonseApartmentResponse> jeonses = getTransactionJeonseHistoryForApartment(request);
+        List<TransactionSaleApartmentResponse> sales = getTransactionSaleHistoryForApartment(request);
+        return TransactionSummaryApartmentResponse.of(jeonses, sales);
+    }
+
+    public TransactionSummaryOfficetelResponse getTransactionSummaryHistoryForOfficetel(TransactionAddressRequest request) {
+        List<TransactionJeonseOfficetelResponse> jeonses = getTransactionJeonseHistoryForOfficetel(request);
+        List<TransactionSaleOfficetelResponse> sales = getTransactionSaleHistoryForOfficetel(request);
+        return TransactionSummaryOfficetelResponse.of(jeonses, sales);
+    }
+
+    public TransactionSummaryRowhouseResponse getTransactionSummaryHistoryForRowhouse(TransactionAddressRequest request) {
+        List<TransactionJeonseRowhouseResponse> jeonses = getTransactionJeonseHistoryForRowhouse(request);
+        List<TransactionSaleRowhouseResponse> sales = getTransactionSaleHistoryForRowhouse(request);
+        return TransactionSummaryRowhouseResponse.of(jeonses, sales);
+    }
+
+    public List<TransactionJeonseApartmentResponse> getTransactionJeonseHistoryForApartment(TransactionAddressRequest request) {
         return transactionJeonseQueryService.getTransactionJeonseHistoryForApartment(request).stream()
                 .map(TransactionJeonseApartmentResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<TransactionJeonseOfficetelResponse> getTransactionJeonseHistoryForOfficetel(TransactionJeonseAddressRequest request) {
+    public List<TransactionJeonseOfficetelResponse> getTransactionJeonseHistoryForOfficetel(TransactionAddressRequest request) {
         return transactionJeonseQueryService.getTransactionJeonseHistoryForOfficetel(request).stream()
                 .map(TransactionJeonseOfficetelResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<TransactionJeonseRowhouseResponse> getTransactionJeonseHistoryForRowhouse(TransactionJeonseAddressRequest request) {
+    public List<TransactionJeonseRowhouseResponse> getTransactionJeonseHistoryForRowhouse(TransactionAddressRequest request) {
         return transactionJeonseQueryService.getTransactionJeonseHistoryForRowhouse(request).stream()
                 .map(TransactionJeonseRowhouseResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<TransactionSaleApartmentResponse> getTransactionSaleHistoryForApartment(TransactionSaleAddressRequest request) {
+    public List<TransactionSaleApartmentResponse> getTransactionSaleHistoryForApartment(TransactionAddressRequest request) {
         return transactionSaleQueryService.getTransactionSaleHistoryForApartment(request).stream()
                 .map(TransactionSaleApartmentResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<TransactionSaleOfficetelResponse> getTransactionSaleHistoryForOfficetel(TransactionSaleAddressRequest request) {
+    public List<TransactionSaleOfficetelResponse> getTransactionSaleHistoryForOfficetel(TransactionAddressRequest request) {
         return transactionSaleQueryService.getTransactionSaleHistoryForOfficetel(request).stream()
                 .map(TransactionSaleOfficetelResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<TransactionSaleRowhouseResponse> getTransactionSaleHistoryForRowhouse(TransactionSaleAddressRequest request) {
+    public List<TransactionSaleRowhouseResponse> getTransactionSaleHistoryForRowhouse(TransactionAddressRequest request) {
         return transactionSaleQueryService.getTransactionSaleHistoryForRowhouse(request).stream()
                 .map(TransactionSaleRowhouseResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
